<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:padding="9dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="?col_text_title"
        android:drawablePadding="12dp"
        android:text="@string/mc_sdk_trade_unit_coin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?divider_line"/>

    <TextView
        android:id="@+id/tv_usdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="?col_text_title"
        android:drawablePadding="12dp"
        android:text="@string/mc_sdk_usdt"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?divider_line"/>

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="?col_text_title"
        android:drawablePadding="12dp"
        android:text="@string/mc_sdk_contract_unit"/>

</LinearLayout>